cloudformation/infra.json
{
  "Parameters": {
    "environment": {
      "AllowedPattern": "^[a-z0-9]+$",
      "Description": "Name of the environment in lower-case (e.g. 'tomy', 'ci', 'aslive' or 'production' - /^[a-z0-9]+$/).",
      "Type": "String"
    },
    "keyName": {
      "Description": "SSH key name for accessing the instances.",
      "Type": "AWS::EC2::KeyPair::KeyName"
    },
    "vpc": {
      "Description": "The id of the VPC that this should be launched into (/^vpc-[0-9a-f]+$/).",
      "Type": "AWS::EC2::VPC::Id"
    },
    "controllerInstanceType": {
      "AllowedPattern": "^[a-z0-9]+\\.[a-z0-9]+$",
      "Description": "The EC2 instance type e.g. m3.medium (/^[a-z0-9]+\\.[a-z0-9]+$/).",
      "Default": "m3.large",
      "Type": "String"
    },
    "dockerInstanceType": {
      "AllowedPattern": "^[a-z0-9]+\\.[a-z0-9]+$",
      "Description": "The EC2 instance type e.g. m3.medium (/^[a-z0-9]+\\.[a-z0-9]+$/).",
      "Default": "m3.large",
      "Type": "String"
    },
    "ImageId": {
      "Description": "AMI id. This will be used for controller and docker boxes",
      "Type": "String",
      "Default": "ami-932248e4"
    },
    "dbPassword": {
      "AllowedPattern": "[a-zA-Z0-9]*",
      "ConstraintDescription": "must contain only alphanumeric characters.",
      "Description": "The database admin account password",
      "MaxLength": "41",
      "MinLength": "8",
      "NoEcho": true,
      "Type": "String"
    },
    "dbSize": {
      "AllowedPattern": "^\\d+$",
      "ConstraintDescription": "must be a positive integer",
      "Description": "Database storage size in GB.",
      "Type": "String"
    },
    "dbType": {
      "AllowedPattern": "^db\\.[a-z0-9]+\\.[a-z0-9]+$",
      "ConstraintDescription": "db.*.*",
      "Default": "db.m3.medium",
      "Description": "Database instance class (e.g. db.m3.medium).",
      "Type": "String"
    },
    "snapshotId": {
      "Description": "The snapshot id to restore from (or blank for a new database) - changing to blow away existing databse.",
      "Type": "String"
    }

  },
  "Mappings": {
    "InstanceMappings": {
      "controller": {
        "maxInstances": "1",
        "minInstances": "1",
        "subnets": ["subnet-72852a05"]
      },
      "dockerhosts": {
        "maxInstances": "3",
        "minInstances": "3",
        "subnets": ["subnet-72852a05","subnet-1e428247","subnet-5980063c"]
      }
    },
    "RDSMappings": {
      "database": {
        "subnets": ["subnet-72852a05","subnet-1e428247","subnet-5980063c"]
      }
    },
    "CustomVariables": {
      "deployUserScript": { "Value": "useradd -G docker -s /bin/bash -m deploy; su - deploy -c \"mkdir -p .ssh; echo \"\"ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDHKthjC8aqnw8U5qlTh57OQoUcVYsnDtiKE0T1ufDFnaBMFmSy0ysrI0jZQCZVihTFvOJ5t+zyKvqwQovRPapY299KmgAt/nHYtipm7OnvXN01NOb1Y70AEAavw5nID3Sn4FYH6VUvvkaf6K1NKKtSrMNrLJbm4spC19c1eogmCp5GlRF+rHRSPb3JRHPuyoEht3OslxiBfxT1oLLaWZAZ7AJw9CL3DAf98ORJN2HocNr3Tj59dMG28PGl2i1xkOHn7rpvU6eqeedjtqiotTcaaa98oz8S5PQgzISXoSSP0cZRctEx+qoDtI6ZiZavYh874EYHI2DIsFhNoQwm2h6 [...]
    }
  },
  "Resources": {
    "PAASNotifications":{
        "Type":"AWS::SNS::Topic",
        "Properties":{
          "Subscription":[ 
            {
              "Endpoint":{"Fn::GetAtt":["ControllerQueue","Arn"]},
              "Protocol":"sqs"
            }
          ]
        } 
    },
    "ControllerQueue":{
      "Type":"AWS::SQS::Queue"
    },
    "ControllerASG": {
      "Properties": {
        "AvailabilityZones": [
          {
            "Fn::Join": [ "", [ { "Ref": "AWS::Region" }, "a" ] ]
          }
        ],
        "LaunchConfigurationName": {
          "Ref": "ControllerLaunchConfig"
        },
        "LoadBalancerNames": [
          {
            "Ref": "ELB"
          }
        ],
        "MaxSize": {
          "Fn::FindInMap": [ "InstanceMappings", "controller", "maxInstances"  ]
        },
        "MinSize": {
          "Fn::FindInMap": [ "InstanceMappings", "controller", "minInstances"  ]
        },
        "Tags": [
          {
            "Key": "Name",
            "PropagateAtLaunch": true,
            "Value": {
              "Fn::Join": [ " ", [ { "Ref": "environment" }, "PaaS-controller" ] ]
            }
          }
        ],
        "VPCZoneIdentifier": {
          "Fn::FindInMap": [ "InstanceMappings", "controller", "subnets"]
        }
      },
      "Type": "AWS::AutoScaling::AutoScalingGroup"
    },

    "DockerASG": {
      "Properties": {
        "AvailabilityZones": [
          {
            "Fn::Join": [ "", [ { "Ref": "AWS::Region" }, "a" ] ]
          },
          {
            "Fn::Join": [ "", [ { "Ref": "AWS::Region" }, "b" ] ]
          },
          {
            "Fn::Join": [ "", [ { "Ref": "AWS::Region" }, "c" ] ]
          }
        ],
        "LaunchConfigurationName": {
          "Ref": "DockerhostsLaunchConfig"
        },
        "MaxSize": {
          "Fn::FindInMap": [ "InstanceMappings", "dockerhosts", "maxInstances" ]
        },
        "MinSize": {
          "Fn::FindInMap": [ "InstanceMappings", "dockerhosts", "minInstances" ]
        },
        "NotificationConfigurations" : [
          {
            "TopicARN" : { "Ref" : "PAASNotifications" },
            "NotificationTypes" : [
              "autoscaling:EC2_INSTANCE_LAUNCH",
              "autoscaling:EC2_INSTANCE_LAUNCH_ERROR",
              "autoscaling:EC2_INSTANCE_TERMINATE",
              "autoscaling:EC2_INSTANCE_TERMINATE_ERROR"
            ]
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "PropagateAtLaunch": true,
            "Value": {
              "Fn::Join": [ " ", [ { "Ref": "environment" }, "PaaS-dockerhosts" ] ]
            }
          }
        ],
        "VPCZoneIdentifier": {
          "Fn::FindInMap": [ "InstanceMappings", "dockerhosts", "subnets" ]
        }
      },
      "Type": "AWS::AutoScaling::AutoScalingGroup"
    },
    "NodesELB": {
      "Properties": {
        "ConnectionDrainingPolicy": {
          "Enabled": true,
          "Timeout": 10
        },
        "CrossZone": "true",
        "HealthCheck": {
          "HealthyThreshold": 2,
          "Interval": 5,
          "Target": "TCP:80",
          "Timeout": 4,
          "UnhealthyThreshold": 2
        },
        "Listeners": [
          {
            "InstancePort": "80",
            "InstanceProtocol": "HTTP",
            "LoadBalancerPort": "80",
            "Protocol": "HTTP"
          }
        ],
        "SecurityGroups": [
          {
            "Ref": "NodesELBSecurityGroup"
          }
        ],
        "Subnets": {
          "Fn::FindInMap": [ "InstanceMappings", "dockerhosts", "subnets" ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [ " ", [ { "Ref": "environment" }, "PaaS Nodes load balancer" ] ]
            }
          }
        ]
      },
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer"
    },
    "ControllerELB": {
      "Properties": {
        "ConnectionDrainingPolicy": {
          "Enabled": true,
          "Timeout": 10
        },
        "CrossZone": "true",
        "HealthCheck": {
          "HealthyThreshold": 2,
          "Interval": 5,
          "Target": "TCP:80",
          "Timeout": 4,
          "UnhealthyThreshold": 2
        },
        "Listeners": [
          {
            "InstancePort": "8000",
            "InstanceProtocol": "HTTP",
            "LoadBalancerPort": "80",
            "Protocol": "HTTP"
          },
          {
            "InstancePort": "8001",
            "InstanceProtocol": "HTTP",
            "LoadBalancerPort": "4000",
            "Protocol": "HTTP"
          }
        ],
        "SecurityGroups": [
          {
            "Ref": "ELBSecurityGroup"
          }
        ],
        "Subnets": {
          "Fn::FindInMap": [ "InstanceMappings", "controller", "subnets" ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [ " ", [ { "Ref": "environment" }, "PaaS Controller load balancer" ] ]
            }
          }
        ]
      },
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer"
    },
    "ELBSecurityGroup": {
      "Properties": {
        "GroupDescription": "Security group to identify traffic from the load balancer",
        "SecurityGroupIngress": [
          {
            "CidrIp": "10.169.0.0/21",
            "FromPort": "80",
            "IpProtocol": "tcp",
            "ToPort": "80"
          },
          {
            "CidrIp": "10.169.0.0/21",
            "FromPort": "81",
            "IpProtocol": "tcp",
            "ToPort": "4000"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [ " ", [ { "Ref": "environment" }, "PaaS", "load balancer security group" ] ]
            }
          }
        ],
        "VpcId": {
          "Ref": "vpc"
        }
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "InstanceProfile": {
      "Properties": {
        "Path": "/",
        "Roles": [
          {
            "Ref": "Role"
          }
        ]
      },
      "Type": "AWS::IAM::InstanceProfile"
    },

    "ControllerSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "vpc"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [ " ", [ { "Ref": "environment" }, "PaaS controller", "security group" ] ]
            }
          }
        ],
        "GroupDescription": "Security group to protect the EC2 instances",
        "SecurityGroupIngress": [
          {
            "CidrIp": "10.0.0.0/8",
            "FromPort": "22",
            "IpProtocol": "tcp",
            "ToPort": "22"
          },
          {
            "CidrIp": "10.0.0.0/8",
            "FromPort": "5672",
            "IpProtocol": "tcp",
            "ToPort": "5672"
          },
          {
            "FromPort": "6379",
            "ToPort": "6379",
            "IpProtocol": "tcp",
            "CidrIp": "10.0.0.0/8"
          },
          {
            "CidrIp": "10.0.0.0/8",
            "FromPort": "8000",
            "IpProtocol": "tcp",
            "ToPort": "8000"
          },
          {
            "CidrIp": "10.0.0.0/8",
            "FromPort": "9000",
            "IpProtocol": "tcp",
            "ToPort": "9000"
          },

          {
            "FromPort": "80",
            "IpProtocol": "tcp",
            "SourceSecurityGroupId": {
              "Ref": "ELBSecurityGroup"
            },
            "ToPort": "80"
          }
        ]
      }
    },

    "DockerHostsSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security group to protect the EC2 instances",
        "VpcId": {
          "Ref": "vpc"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [ " ", [ { "Ref": "environment" }, "PaaS Docker", "security group" ] ]
            }
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "10.0.0.0/8",
            "FromPort": "22",
            "IpProtocol": "tcp",
            "ToPort": "22"
          },
          {
            "CidrIp": "10.0.0.0/8",
            "FromPort": "4243",
            "IpProtocol": "tcp",
            "ToPort": "4243"
          },
          {
            "FromPort": "0",
            "ToPort": "65535",
            "IpProtocol": "tcp",
            "SourceSecurityGroupId": {
              "Ref": "ControllerSecurityGroup"
            }
          }
        ]
      }
    },
    "DockerHostsSecurityGroupIngress": {
      "Type" : "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "DockerHostsSecurityGroup" },
        "IpProtocol": "tcp",
        "FromPort": "0",
        "ToPort": "65535",
        "SourceSecurityGroupId": { "Ref": "DockerHostsSecurityGroup" }
      },
      "DependsOn": "DockerHostsSecurityGroup"
    },

    "ControllerLaunchConfig": {
      "Properties": {
        "AssociatePublicIpAddress": "false",
        "IamInstanceProfile": {
          "Ref": "InstanceProfile"
        },
        "ImageId": {
          "Ref": "ImageId"
        },
        "InstanceType": {
          "Ref": "controllerInstanceType"
        },
        "KeyName": {
          "Ref": "keyName"
        },
        "SecurityGroups": [
          {
            "Ref": "ControllerSecurityGroup"
          }
        ],
        "UserData": { "Fn::Base64" : { "Fn::Join" : ["", [
          "#!/bin/bash\n",
          "/usr/local/bin/attach_ebs.py $(ec2metadata --instance-id) ", { "Ref": "RedisEBS" } , "\n",

          "echo SQL_ADDRESS='", {"Fn::GetAtt":["Database","Endpoint.Address"]} , "' >> /etc/paas.config\n",
          "echo SQL_PASSWORD='", { "Ref": "dbPassword" }, "' >> /etc/paas.config\n", 
	  "echo SQS_NAME='", {"Fn::GetAtt":[ "ControllerQueue", "Arn"]} , "' >> /etc/paas.config\n",

          "pip install cli53\n",
          "cli53 rrcreate somewhere.com controller.", { "Ref": "environment"} ," A $(ec2metadata --local-ipv4) --replace --ttl 60\n",
          {
            "Fn::FindInMap": [ "CustomVariables", "deployUserScript", "Value" ]

          }
        ]] }}
      },
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "DependsOn": "RedisEBS"

    },
    "DockerhostsLaunchConfig": {
      "Properties": {
        "AssociatePublicIpAddress": "false",
        "IamInstanceProfile": {
          "Ref": "InstanceProfile"
        },
        "ImageId": {
          "Ref": "ImageId"
        },
        "InstanceType": {
          "Ref": "dockerInstanceType"
        },
        "KeyName": {
          "Ref": "keyName"
        },
        "SecurityGroups": [
          {
            "Ref": "DockerHostsSecurityGroup"
          }
        ],
        "UserData": {"Fn::Base64": {"Fn::Join": ["", [
          "#!/bin/bash\n",
          {
            "Fn::FindInMap": ["CustomVariables", "deployUserScript", "Value"]
          },
          "\n",
          "service docker stop; umount -f /mnt; mkfs.ext4 /dev/xvdb; mount -t ext4 /dev/xvdb /var/lib/docker && service docker start\n",
          "python /usr/local/bin/manage-hosts.py ", { "Ref": "environment" }, " update"
        ]]}}

      },
      "Type": "AWS::AutoScaling::LaunchConfiguration"
    },
    "Role": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sts:AssumeRole"
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": [
                  "ec2.amazonaws.com"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "Path": "/",
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "elasticloadbalancing:DescribeInstanceHealth",
                  "Effect": "Allow",
                  "Resource": "*"
                },
                {
                  "Action": [
                    "ec2:AttachVolume",
                    "ec2:DescribeVolumes",
                    "ec2:DescribeVolumeStatus"
                  ],
                  "Effect": "Allow",
                  "Resource": "*"
                },
		{
                  "Effect":"Allow",
 	          "Action":[
                    "sqs:DeleteMessage",
                    "sqs:ReceiveMessage"
                  ],
                  "Resource":[
                    {"Fn::GetAtt":["ControllerQueue","Arn"]}
                  ] 
		},
                {
                  "Effect": "Allow",
                  "Resource": "*",
                  "Action": [
                    "ec2:DescribeInstances"
                  ]
                },
                {
                  "Action": [
                    "route53:ChangeResourceRecordSets",
                    "route53:GetHostedZone",
                    "route53:ListResourceRecordSets"
                  ],
                  "Effect": "Allow",
                  "Resource": "arn:aws:route53:::hostedzone/Z3OTMN2JUY5IS5"
                },
                {
                  "Action": [
                    "route53:GetChange"
                  ],
                  "Resource": "arn:aws:route53:::change/*",
                  "Effect": "Allow"
                },
                {
                  "Action": [
                    "route53:ListHostedZones"
                  ],
                  "Resource": "*",
                  "Effect": "Allow"
                }
              ],
              "Version": "2012-10-17"
            },
            "PolicyName": "Policy"
          }
        ]
      },
      "Type": "AWS::IAM::Role"
    },
    "RedisEBS": {
      "Type" : "AWS::EC2::Volume",
      "Properties" : {
        "Size" : "10",
        "VolumeType" : "standard",
        "AvailabilityZone" : "eu-west-1a"
      }
    },
    "DBAccessSecurityGroup": {
      "Properties": {
        "GroupDescription": "PaaS DB Access Security Group",
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [ " ", [ { "Ref": "environment" }, "PaaS db access security group" ] ]
            }
          }
        ],
        "VpcId": {
          "Ref": "vpc"
        }
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "DBSecurityGroup": {
      "Properties": {
        "GroupDescription": "PaaS DB Security Group",
        "SecurityGroupIngress": [
          {
            "FromPort": "3306",
            "IpProtocol": "tcp",
            "SourceSecurityGroupId": {
              "Ref": "DBAccessSecurityGroup"
            },
            "ToPort": "3306"
          },
          {
            "FromPort": "3306",
            "ToPort": "3306",
            "IpProtocol": "tcp",
            "SourceSecurityGroupId": {
              "Ref": "ControllerSecurityGroup"
            }
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [ " ", [ { "Ref": "environment" }, "PaaS db security group" ] ]
            }
          }
        ],
        "VpcId": {
          "Ref": "vpc"
        }
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "Database": {
      "Properties": {
        "AllocatedStorage": {
          "Ref": "dbSize"
        },
        "BackupRetentionPeriod": 4,
        "DBInstanceClass": {
          "Ref": "dbType"
        },
        "DBParameterGroupName": {
          "Ref": "ParamGroup"
        },
        "DBSnapshotIdentifier": {
          "Ref": "snapshotId"
        },
        "DBSubnetGroupName": {
          "Ref": "SubnetGroup"
        },
        "Engine": "MySQL",
        "EngineVersion": "5.6",
        "MasterUserPassword": {
          "Ref": "dbPassword"
        },
        "MasterUsername": "PaaS",
        "DBName": "paas",
        "MultiAZ": "true",
        "StorageType": "gp2",
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [ " ", [ { "Ref": "environment" }, "PaaS db instance" ] ]
            }
          }
        ],
        "VPCSecurityGroups": [
          {
            "Ref": "DBSecurityGroup"
          }
        ]
      },
      "Type": "AWS::RDS::DBInstance"
    },
    "ParamGroup": {
      "Properties": {
        "Description": "PaaS db parameter group",
        "Family": "MySQL5.6",
        "Parameters": {},
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [ " ", [ { "Ref": "environment" }, "PaaS db parameter group" ] ]
            }
          }
        ]
      },
      "Type": "AWS::RDS::DBParameterGroup"
    },
    "SubnetGroup": {
      "Properties": {
        "DBSubnetGroupDescription": "PaaS DB Subnet Group",
        "SubnetIds": {
          "Fn::FindInMap": [ "RDSMappings", "database", "subnets"]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [ " ", [ { "Ref": "environment" }, "PaaS db subnet group" ] ]
            }
          }
        ]
      },
      "Type": "AWS::RDS::DBSubnetGroup"
    }
  }
}
